-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 11-shenandoah, 14, 15
-
Component/s: hotspot
-
b33
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8237729 | 15 | Zhengyu Gu | P2 | Resolved | Fixed | b08 |
| JDK-8237716 | 14.0.2 | Zhengyu Gu | P2 | Resolved | Fixed | b01 |
| JDK-8237720 | 14.0.1 | Zhengyu Gu | P2 | Resolved | Fixed | b02 |
| JDK-8246607 | 13.0.4 | Zhengyu Gu | P2 | Resolved | Fixed | b04 |
| JDK-8240452 | 11.0.8 | Zhengyu Gu | P2 | Resolved | Fixed | b01 |
The method uses NativeAccess barrier to load oop, which is incorrect. This unexpected behavior results Shenandoah failure.
- backported by
-
JDK-8237716 JvmtiTagMap::weak_oops_do() should not trigger barriers
-
- Resolved
-
-
JDK-8237720 JvmtiTagMap::weak_oops_do() should not trigger barriers
-
- Resolved
-
-
JDK-8237729 JvmtiTagMap::weak_oops_do() should not trigger barriers
-
- Resolved
-
-
JDK-8240452 JvmtiTagMap::weak_oops_do() should not trigger barriers
-
- Resolved
-
-
JDK-8246607 JvmtiTagMap::weak_oops_do() should not trigger barriers
-
- Resolved
-
- duplicates
-
JDK-8237638 Shenandoah fails some vmTestbase_nsk_jvmti tests with "assert(!ShenandoahThreadLocalData::is_evac_allowed(Thread::current())) failed: sanity"
-
- Closed
-
- relates to
-
JDK-8242216 ObjectSampler::weak_oops_do() should not trigger barrier
-
- Resolved
-
-
JDK-8245240 Shenandoah: support nesting evacuation OOM scope
-
- Resolved
-