8237396: JvmtiTagMap::weak_oops_do() should not trigger barriers

Reviewed-by: stefank, rkennke